v1.0.0/modules/schema/pages/class/MarketPerson.adoc
= `MarketPerson`
:toclevels: 4


+++General purpose information for name and other information to contact people.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:MarketPerson`


| CIM standard (perspective)
| IEC62325 (Market)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** *`MarketPerson`*


== Slots



.Associated classes
[d2,svg,theme=4]
----
vars: {
  d2-config: {
    pad: 20
  }
}
MarketPerson {
  style {
    fill: "#fffbef"
    shadow: true
  }
}



ElectronicAddress {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



ElectronicAddress {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



TelephoneNumber {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



TelephoneNumber {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



Status {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



MarketSkill {
  style {
    fill: "#fffbef"
    shadow: true
  }
}



MarketParticipant {
  style {
    fill: "#fffbef"
    shadow: true
  }
}



DiagramObject {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



InstanceSet {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



Name {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}




MarketPerson -> ElectronicAddress: electronicAddressAlternate


MarketPerson -> ElectronicAddress: electronicAddressPrimary


MarketPerson -> TelephoneNumber: landlinePhone


MarketPerson -> TelephoneNumber: mobilePhone


MarketPerson -> Status: status


MarketPerson -> MarketSkill: MarketSkills


MarketPerson -> MarketParticipant: MarketParticipant


MarketPerson -> DiagramObject: DiagramObjects


MarketPerson -> InstanceSet: InstanceSet


MarketPerson -> Name: Names


MarketPerson -> ChangeSetMember: PropertiesCIMDataObject


MarketPerson -> ChangeSetMember: TargetingCIMDataObject


legend: "" {
  style: {
    fill: transparent
    stroke: transparent
  }
  grid-rows: 3
  grid-columns: 2
  grid-gap: 10
  near: bottom-right
  iec61968_color: "" {
    style: {
      fill: "#d1e7c2"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61968_text: "IEC61968 (Enterprise)" {
    shape: text
  }
  iec61970_color: "" {
    style: {
      fill: "#eccfcb"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61970_text: "IEC61970 (Grid)" {
    shape: text
  }
  iec62325_color: "" {
    style: {
      fill: "#fffbef"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec62325_text: "IEC62325 (Market)" {
    shape: text
  }
}
----


[cols="3,1,3,6",width=100%]
|===
| Name | Cardinality | Type | Description

| <<InstanceSet,`InstanceSet`>>
| 1
| xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++

| <<category,`category`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Category of this person relative to utility operations, classified according to the utility's corporate standards and practices. Examples include employee, contractor, agent, not affiliated, etc.
This field is not used to indicate whether this person is a customer of the utility. Often an employee or contractor is also a customer. Customer information is gained with relationship to Organisation and CustomerData. In similar fashion, this field does not indicate the various roles this person may fill as part of utility operations.+++

| <<electronicAddressAlternate,`electronicAddressAlternate`>>
| 0..1
| xref::class/ElectronicAddress.adoc[`ElectronicAddress`]
| +++Alternate Electronic address.+++

| <<electronicAddressPrimary,`electronicAddressPrimary`>>
| 0..1
| xref::class/ElectronicAddress.adoc[`ElectronicAddress`]
| +++Primary Electronic address.+++

| <<firstName,`firstName`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Person's first name.+++

| <<governmentID,`governmentID`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Unique identifier for person relative to its governing authority, for example a federal tax identifier (such as a Social Security number in the United States).+++

| <<landlinePhone,`landlinePhone`>>
| 0..1
| xref::class/TelephoneNumber.adoc[`TelephoneNumber`]
| +++Landline phone number.+++

| <<lastName,`lastName`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Person's last (family, sir) name.+++

| <<mName,`mName`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Middle name(s) or initial(s).+++

| <<mobilePhone,`mobilePhone`>>
| 0..1
| xref::class/TelephoneNumber.adoc[`TelephoneNumber`]
| +++Mobile phone number.+++

| <<prefix,`prefix`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++A prefix or title for the person's name, such as Miss, Mister, Doctor, etc.+++

| <<specialNeed,`specialNeed`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Special service needs for the person (contact) are described; examples include life support, etc.+++

| <<status,`status`>>
| 0..1
| xref::class/Status.adoc[`Status`]
| n/a

| <<suffix,`suffix`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++A suffix for the person's name, such as II, III, etc.+++

| <<userID,`userID`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The user name for the person; required to log in.+++

| <<MarketParticipant,`MarketParticipant`>>
| 0..*
| xref::class/MarketParticipant.adoc[`MarketParticipant`]
| n/a

| <<MarketSkills,`MarketSkills`>>
| 0..*
| xref::class/MarketSkill.adoc[`MarketSkill`]
| n/a

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++

| <<aliasName,`aliasName`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

| <<description,`description`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

| <<mRID,`mRID`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

| <<name,`name`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++

| <<DiagramObjects,`DiagramObjects`>>
| 0..*
| xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++

| <<Names,`Names`>>
| 0..*
| xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..*
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#category]
=== `category`
+++Category of this person relative to utility operations, classified according to the utility's corporate standards and practices. Examples include employee, contractor, agent, not affiliated, etc.
This field is not used to indicate whether this person is a customer of the utility. Often an employee or contractor is also a customer. Customer information is gained with relationship to Organisation and CustomerData. In similar fashion, this field does not indicate the various roles this person may fill as part of utility operations.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:MarketPerson.category`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#electronicAddressAlternate]
=== `electronicAddressAlternate`
+++Alternate Electronic address.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:MarketPerson.electronicAddressAlternate`
| Cardinality
| 0..1
| Type
| xref::class/ElectronicAddress.adoc[`ElectronicAddress`]


|===

//[discrete]
[#electronicAddressPrimary]
=== `electronicAddressPrimary`
+++Primary Electronic address.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:MarketPerson.electronicAddressPrimary`
| Cardinality
| 0..1
| Type
| xref::class/ElectronicAddress.adoc[`ElectronicAddress`]


|===

//[discrete]
[#firstName]
=== `firstName`
+++Person's first name.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:MarketPerson.firstName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

//[discrete]
[#governmentID]
=== `governmentID`
+++Unique identifier for person relative to its governing authority, for example a federal tax identifier (such as a Social Security number in the United States).+++

[cols="h,4",width=65%]
|===
| URI
| `cim:MarketPerson.governmentID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#landlinePhone]
=== `landlinePhone`
+++Landline phone number.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:MarketPerson.landlinePhone`
| Cardinality
| 0..1
| Type
| xref::class/TelephoneNumber.adoc[`TelephoneNumber`]


|===

//[discrete]
[#lastName]
=== `lastName`
+++Person's last (family, sir) name.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:MarketPerson.lastName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

//[discrete]
[#MarketParticipant]
=== `MarketParticipant`


[cols="h,4",width=65%]
|===
| URI
| `cim:MarketPerson.MarketParticipant`
| Cardinality
| 0..*
| Type
| xref::class/MarketParticipant.adoc[`MarketParticipant`]


|===

//[discrete]
[#MarketSkills]
=== `MarketSkills`


[cols="h,4",width=65%]
|===
| URI
| `cim:MarketPerson.MarketSkills`
| Cardinality
| 0..*
| Type
| xref::class/MarketSkill.adoc[`MarketSkill`]


|===

//[discrete]
[#mName]
=== `mName`
+++Middle name(s) or initial(s).+++

[cols="h,4",width=65%]
|===
| URI
| `cim:MarketPerson.mName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

//[discrete]
[#mobilePhone]
=== `mobilePhone`
+++Mobile phone number.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:MarketPerson.mobilePhone`
| Cardinality
| 0..1
| Type
| xref::class/TelephoneNumber.adoc[`TelephoneNumber`]


|===

//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#prefix]
=== `prefix`
+++A prefix or title for the person's name, such as Miss, Mister, Doctor, etc.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:MarketPerson.prefix`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#specialNeed]
=== `specialNeed`
+++Special service needs for the person (contact) are described; examples include life support, etc.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:MarketPerson.specialNeed`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

//[discrete]
[#status]
=== `status`


[cols="h,4",width=65%]
|===
| URI
| `cim:MarketPerson.status`
| Cardinality
| 0..1
| Type
| xref::class/Status.adoc[`Status`]


|===

//[discrete]
[#suffix]
=== `suffix`
+++A suffix for the person's name, such as II, III, etc.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:MarketPerson.suffix`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#userID]
=== `userID`
+++The user name for the person; required to log in.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:MarketPerson.userID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===


