v1.1.0/modules/schema/pages/class/MarketPerson.adoc
= `MarketPerson`
:toclevels: 4


+++General purpose information for name and other information to contact people.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:MarketPerson`


| CIM standard (perspective)
| IEC62325 (Market)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** *`MarketPerson`*


== Slots




[cols="1,1,2,1",width=100%]
|===
| Name | Type | Description | Inherited from

| <<MarketParticipant,`MarketParticipant`>>
//| [[slots_table.MarketParticipant]]<<MarketParticipant,`MarketParticipant`>>
| 0..* +
xref::class/MarketParticipant.adoc[`MarketParticipant`]
| _n/a_
| _n/a_

| <<MarketSkills,`MarketSkills`>>
//| [[slots_table.MarketSkills]]<<MarketSkills,`MarketSkills`>>
| 0..* +
xref::class/MarketSkill.adoc[`MarketSkill`]
| _n/a_
| _n/a_

| <<category,`category`>>
//| [[slots_table.category]]<<category,`category`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Category of this person relative to utility operations, classified according to the utility's corporate standards and...+++
| _n/a_

| <<electronicAddressAlternate,`electronicAddressAlternate`>>
//| [[slots_table.electronicAddressAlternate]]<<electronicAddressAlternate,`electronicAddressAlternate`>>
| 0..1 +
xref::class/ElectronicAddress.adoc[`ElectronicAddress`]
| +++Alternate Electronic address.+++
| _n/a_

| <<electronicAddressPrimary,`electronicAddressPrimary`>>
//| [[slots_table.electronicAddressPrimary]]<<electronicAddressPrimary,`electronicAddressPrimary`>>
| 0..1 +
xref::class/ElectronicAddress.adoc[`ElectronicAddress`]
| +++Primary Electronic address.+++
| _n/a_

| <<firstName,`firstName`>>
//| [[slots_table.firstName]]<<firstName,`firstName`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Person's first name.+++
| _n/a_

| <<governmentID,`governmentID`>>
//| [[slots_table.governmentID]]<<governmentID,`governmentID`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Unique identifier for person relative to its governing authority, for example a federal tax identifier (such as a Social...+++
| _n/a_

| <<landlinePhone,`landlinePhone`>>
//| [[slots_table.landlinePhone]]<<landlinePhone,`landlinePhone`>>
| 0..1 +
xref::class/TelephoneNumber.adoc[`TelephoneNumber`]
| +++Landline phone number.+++
| _n/a_

| <<lastName,`lastName`>>
//| [[slots_table.lastName]]<<lastName,`lastName`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Person's last (family, sir) name.+++
| _n/a_

| <<mName,`mName`>>
//| [[slots_table.mName]]<<mName,`mName`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Middle name(s) or initial(s).+++
| _n/a_

| <<mobilePhone,`mobilePhone`>>
//| [[slots_table.mobilePhone]]<<mobilePhone,`mobilePhone`>>
| 0..1 +
xref::class/TelephoneNumber.adoc[`TelephoneNumber`]
| +++Mobile phone number.+++
| _n/a_

| <<prefix,`prefix`>>
//| [[slots_table.prefix]]<<prefix,`prefix`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++A prefix or title for the person's name, such as Miss, Mister, Doctor, etc.+++
| _n/a_

| <<specialNeed,`specialNeed`>>
//| [[slots_table.specialNeed]]<<specialNeed,`specialNeed`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Special service needs for the person (contact) are described; examples include life support, etc.+++
| _n/a_

| <<status,`status`>>
//| [[slots_table.status]]<<status,`status`>>
| 0..1 +
xref::class/Status.adoc[`Status`]
| _n/a_
| _n/a_

| <<suffix,`suffix`>>
//| [[slots_table.suffix]]<<suffix,`suffix`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++A suffix for the person's name, such as II, III, etc.+++
| _n/a_

| <<userID,`userID`>>
//| [[slots_table.userID]]<<userID,`userID`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The user name for the person; required to log in.+++
| _n/a_

| <<DiagramObjects,`DiagramObjects`>>
//| [[slots_table.DiagramObjects]]<<DiagramObjects,`DiagramObjects`>>
| 0..* +
xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<InstanceSet,`InstanceSet`>>
//| [[slots_table.InstanceSet]]<<InstanceSet,`InstanceSet`>>
| 1 +
xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<Names,`Names`>>
//| [[slots_table.Names]]<<Names,`Names`>>
| 0..* +
xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
//| [[slots_table.PropertiesCIMDataObject]]<<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1 +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
//| [[slots_table.TargetingCIMDataObject]]<<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..* +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<aliasName,`aliasName`>>
//| [[slots_table.aliasName]]<<aliasName,`aliasName`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<description,`description`>>
//| [[slots_table.description]]<<description,`description`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<mRID,`mRID`>>
//| [[slots_table.mRID]]<<mRID,`mRID`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<name,`name`>>
//| [[slots_table.name]]<<name,`name`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.aliasName,&#10548;>>
--
////


//[discrete]
[#category]
=== `category`
+++Category of this person relative to utility operations, classified according to the utility's corporate standards and practices. Examples include employee, contractor, agent, not affiliated, etc.
This field is not used to indicate whether this person is a customer of the utility. Often an employee or contractor is also a customer. Customer information is gained with relationship to Organisation and CustomerData. In similar fashion, this field does not indicate the various roles this person may fill as part of utility operations.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:MarketPerson.category`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

////
[.text-left]
--
<<slots_table.category,&#10548;>>
--
////


//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.description,&#10548;>>
--
////


//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.DiagramObjects,&#10548;>>
--
////


//[discrete]
[#electronicAddressAlternate]
=== `electronicAddressAlternate`
+++Alternate Electronic address.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:MarketPerson.electronicAddressAlternate`
| Cardinality
| 0..1
| Type
| xref::class/ElectronicAddress.adoc[`ElectronicAddress`]


|===

////
[.text-left]
--
<<slots_table.electronicAddressAlternate,&#10548;>>
--
////


//[discrete]
[#electronicAddressPrimary]
=== `electronicAddressPrimary`
+++Primary Electronic address.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:MarketPerson.electronicAddressPrimary`
| Cardinality
| 0..1
| Type
| xref::class/ElectronicAddress.adoc[`ElectronicAddress`]


|===

////
[.text-left]
--
<<slots_table.electronicAddressPrimary,&#10548;>>
--
////


//[discrete]
[#firstName]
=== `firstName`
+++Person's first name.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:MarketPerson.firstName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

////
[.text-left]
--
<<slots_table.firstName,&#10548;>>
--
////


//[discrete]
[#governmentID]
=== `governmentID`
+++Unique identifier for person relative to its governing authority, for example a federal tax identifier (such as a Social Security number in the United States).+++


[cols="h,4",width=65%]
|===
| URI
| `cim:MarketPerson.governmentID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

////
[.text-left]
--
<<slots_table.governmentID,&#10548;>>
--
////


//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.InstanceSet,&#10548;>>
--
////


//[discrete]
[#landlinePhone]
=== `landlinePhone`
+++Landline phone number.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:MarketPerson.landlinePhone`
| Cardinality
| 0..1
| Type
| xref::class/TelephoneNumber.adoc[`TelephoneNumber`]


|===

////
[.text-left]
--
<<slots_table.landlinePhone,&#10548;>>
--
////


//[discrete]
[#lastName]
=== `lastName`
+++Person's last (family, sir) name.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:MarketPerson.lastName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

////
[.text-left]
--
<<slots_table.lastName,&#10548;>>
--
////


//[discrete]
[#MarketParticipant]
=== `MarketParticipant`



[cols="h,4",width=65%]
|===
| URI
| `cim:MarketPerson.MarketParticipant`
| Cardinality
| 0..*
| Type
| xref::class/MarketParticipant.adoc[`MarketParticipant`]


|===

////
[.text-left]
--
<<slots_table.MarketParticipant,&#10548;>>
--
////


//[discrete]
[#MarketSkills]
=== `MarketSkills`



[cols="h,4",width=65%]
|===
| URI
| `cim:MarketPerson.MarketSkills`
| Cardinality
| 0..*
| Type
| xref::class/MarketSkill.adoc[`MarketSkill`]


|===

////
[.text-left]
--
<<slots_table.MarketSkills,&#10548;>>
--
////


//[discrete]
[#mName]
=== `mName`
+++Middle name(s) or initial(s).+++


[cols="h,4",width=65%]
|===
| URI
| `cim:MarketPerson.mName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

////
[.text-left]
--
<<slots_table.mName,&#10548;>>
--
////


//[discrete]
[#mobilePhone]
=== `mobilePhone`
+++Mobile phone number.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:MarketPerson.mobilePhone`
| Cardinality
| 0..1
| Type
| xref::class/TelephoneNumber.adoc[`TelephoneNumber`]


|===

////
[.text-left]
--
<<slots_table.mobilePhone,&#10548;>>
--
////


//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.mRID,&#10548;>>
--
////


//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.name,&#10548;>>
--
////


//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.Names,&#10548;>>
--
////


//[discrete]
[#prefix]
=== `prefix`
+++A prefix or title for the person's name, such as Miss, Mister, Doctor, etc.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:MarketPerson.prefix`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

////
[.text-left]
--
<<slots_table.prefix,&#10548;>>
--
////


//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.PropertiesCIMDataObject,&#10548;>>
--
////


//[discrete]
[#specialNeed]
=== `specialNeed`
+++Special service needs for the person (contact) are described; examples include life support, etc.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:MarketPerson.specialNeed`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

////
[.text-left]
--
<<slots_table.specialNeed,&#10548;>>
--
////


//[discrete]
[#status]
=== `status`



[cols="h,4",width=65%]
|===
| URI
| `cim:MarketPerson.status`
| Cardinality
| 0..1
| Type
| xref::class/Status.adoc[`Status`]


|===

////
[.text-left]
--
<<slots_table.status,&#10548;>>
--
////


//[discrete]
[#suffix]
=== `suffix`
+++A suffix for the person's name, such as II, III, etc.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:MarketPerson.suffix`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

////
[.text-left]
--
<<slots_table.suffix,&#10548;>>
--
////


//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.TargetingCIMDataObject,&#10548;>>
--
////


//[discrete]
[#userID]
=== `userID`
+++The user name for the person; required to log in.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:MarketPerson.userID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

////
[.text-left]
--
<<slots_table.userID,&#10548;>>
--
////





== Used by


[cols="1,1",width=65%]
|===
| Source class | Slot name



| xref::class/MarketParticipant.adoc[`MarketParticipant`] | xref::class/MarketParticipant.adoc#MarketPerson[`MarketPerson`]



| xref::class/MarketSkill.adoc[`MarketSkill`] | xref::class/MarketSkill.adoc#MarketPerson[`MarketPerson`]


|===

